@@ -1,3 +1,21 @@
 # Battleship
 
-Simple battleship app for NTUA medialab class.
+Simple battleship app for NTUA medialab course created with [Java FX](https://openjfx.io/).
+
+### To run this app,after cloning:
+* cd to the project's dir
+* use: ```java -jar --module-path "PATH_TO_JAVAFX" --add-modules javafx.controls,javafx.fxml battleship.jar```
+> Running this requires for you to have JavaFX installed in your computer
+
+After this you should be able to see the image below:
+
+![2021-02-15-01-26-17.png](https://i.postimg.cc/K8d35L3m/2021-02-15-01-26-17.png)]
+
+Type player_default[x].txt where x can be any number to initialize a board.
+
+You can create more initialization boards and add them to PlayerFiles.
+
+If everything worked fine you should see something like this:
+
+![2021-02-15-17-44-20.png](https://i.postimg.cc/ZKXqkmbc/2021-02-15-17-44-20.png)]
+
